--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 							<div class="price mb-2"><span> 887€ CC</span></div>
 							<div>
 								<span class="d-block mb-2 text-black-50">2 Pièces · 32 m² · Montmagny 95360 · Quartier Centre-ville - Carrières</span>
-								<span class="city d-block mb-3">Superbe T2 meublé refait a neuf</span>
+								<span class="city d-block mb-3">Superbe T2 meublé </span>
 
 								<div class="specs d-flex mb-4">
 									<span class="d-block d-flex align-items-center me-3">
@@ -276,7 +276,7 @@
 									</span>
 								</div>
 
-								<a href="https://www.leboncoin.fr/ad/locations/2840236142" class="btn btn-primary py-2 px-3">Voir l'annonce sur le site</a>
+								<a href="https://www.leboncoin.fr/ad/locations/2880883654" class="btn btn-primary py-2 px-3">Voir l'annonce sur le site</a>
 							</div>
 						</div>
 					</div> <!-- .item -->
